# Pink-Crypto

./: .gitignore  LICENSE  README.md  REUSE.toml  SECURITY.md  build.gradle  build.gradle.kts  detekt.yml  gradle.properties  settings.gradle  settings.gradle.kts
.detekt/: detekt-baseline.xml  detekt.yml  license.template
.github/: dependabot.yml
.github/workflows/: assembleDebug.yml  continuous.yml  lint-detekt.yml  lint.yml  publish.yml  tests-jvm.yml  validate-gradlew.yml
android/: .gitignore  build.gradle.kts  proguard-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/de/lukaspieper/truvark/: Activity.kt  App.kt  Page.kt
android/src/main/java/de/lukaspieper/truvark/common/: NotificationChannel.kt
android/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_locker.xml  ic_truvark.xml  ic_vault_filesystem.xml
android/src/main/res/mipmap-anydpi/: ic_launcher_round.xml
android/src/main/res/raw/: readme
android/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/src/main/res/values-de/: strings.xml
android/src/main/res/values-night/: themes.xml
android/src/main/res/xml/: data_extraction_rules.xml
common/: build.gradle.kts
common/src/test/resources/: junit-platform.properties
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
lib/src/main/cpp/argon2/: .gitignore
lib/src/main/cpp/jni/: Argon2Jni.cpp
(+124 files in other folders)
